# saca-k

./: CMakeLists.txt  README.md
include/: SuffixSort.h
src/: SuffixSort.cpp  formNewString.cpp  inducedSortLevel0.cpp  inducedSortLevel1.cpp  main.cpp
tests/: CMakeLists.txt  integrationTests.cpp  test1_steps.txt  testSort.cpp
tests/bin_tests/: test0.txt  test1.txt  test2.txt
tests/char_tests/: test1.txt  test10.txt  test11.txt  test2.txt  test3.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/int_tests/: test0.txt  test1.txt  test2.txt  test3.txt  test4.txt
